--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         var popup = new mapboxgl.Popup({ offset: [0, -15] })
           .setLngLat(feature.geometry.coordinates)
           .setHTML(
-            "<div style='text-align:center; max-width: 400px; padding:40px;'><h3>" +
+            "<div style='text-align:center; max-width: 400px; padding:40px;'><h3 style='font-size: 32px; margin-top: 0px;'>" +
               feature.properties.title +
               "</h3><p>" +
               feature.properties.description +
