--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
         var popup = new mapboxgl.Popup({ offset: [0, -15] })
           .setLngLat(feature.geometry.coordinates)
           .setHTML(
-            "<div style='text-align:center; max-width: 400px; padding:40px;'><h3 style='font-size: 32px; margin-top: 0px;'>" +
+            "<div style='text-align:center; max-width: 400px; padding:24px;'><h3 style='font-size: 24px; margin-top: 0px; letter-spacing: 1px;'>" +
               feature.properties.title +
-              "</h3><p>" +
+              "</h3><p style='line-height: 16px;'>" +
               feature.properties.description +
-              "</p><p>Category:" +
+              "</p><p style='margin-bottom: 0; margin-top: 0;'>Category: " +
               feature.properties.category +
-              "</p><p>Part of TQ since: " +
+              "</p><p style='margin-bottom: 0; margin-top: 0;'>Part of TQ since: " +
               feature.properties.partofTQsince +
-              "</p><p>Focus: " +
+              "</p><p style='margin-bottom: 0; margin-top: 0;'>Focus: " +
               feature.properties.focus +
               "</p><p>Website: <a href='" +
               feature.properties.website +
