Remove popup dialog tip

--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
         bottom: 0;
         width: 100%;
       }
+
+      .mapboxgl-popup-tip {
+        display: none;
+      }
     </style>
   </head>
   <body>
