Add website icon

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               feature.properties.partofTQsince +
               "</p><p style='margin-bottom: 0; margin-top: 0;'>Focus: " +
               feature.properties.focus +
-              "</p><p>Website: <a href='" +
+              "</p><img src='website.png' style='float: left; padding-right: 8px;'><p>Website: <a href='" +
               feature.properties.website +
               "'/>" +
               feature.properties.website +
