Add containing div

--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
               feature.properties.partofTQsince +
               "</p><p style='margin-bottom: 0; margin-top: 0;'>Focus: " +
               feature.properties.focus +
-              "</p><img src='website.png' style='float: left; padding-right: 8px;'><p>Website: <a href='" +
+              "</p><div style='height: 24px;'><img src='website.png' style='float: left; padding-right: 8px;'><p>Website: <a href='" +
               feature.properties.website +
               "'/>" +
               feature.properties.website +
-              "</p></div>"
+              "</p></div></div>"
           )
           .setLngLat(feature.geometry.coordinates)
           .addTo(map);
