Reduce icon size, remove paddings

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               feature.properties.partofTQsince +
               "</p><p style='margin-bottom: 0; margin-top: 0;'>Focus: " +
               feature.properties.focus +
-              "</p><div style='height: 24px;'><img src='website.png' style='margin-top: 10px;'><p style='margin-top: 0; padding-top: 0;'><a href='" +
+              "</p><div><img src='website.png' width='16px' style='margin-top: 20px;'><p style='margin-top: 0; padding-top: 0;'><a href='" +
               feature.properties.website +
               "'/>" +
               feature.properties.website +
